--- a/sass/_binded_trigger_box.scss
+++ b/sass/_binded_trigger_box.scss
@@ -389,6 +389,7 @@ $alertRed : rgba(208, 106, 106, 1);
               font-size: 12px;
               position: relative;
               top: -2px;
+              line-height: 1em;
             }
           }
 
