--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -4160,7 +4160,7 @@ span.checkbox {
       .completion-report-inner .callback-set .callback-extras .col p.description {
         font-size: 80%;
         text-align: center;
-        padding: 0 10px 10px; }
+        padding: 0 10px; }
       .completion-report-inner .callback-set .callback-extras .col h3 {
         text-align: center;
         margin: 10px;
