--- a/sass/_binded_trigger_box.scss
+++ b/sass/_binded_trigger_box.scss
@@ -1166,7 +1166,7 @@ $alertRed : rgba(208, 106, 106, 1);
       .col p.description {
         font-size: 80%;
         text-align: center;
-        padding: 0 $padding $padding;
+        padding: 0 $padding;
       }
 
       .col h3 {
