--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -3532,7 +3532,7 @@ span.checkbox {
       .binded-trigger-box .tabbed-nav li.item {
         background: #555; }
         .binded-trigger-box .tabbed-nav li.item .num-flag {
-          background: #a2a1a1;
+          background: #c19d9d;
           -webkit-border-radius: 3px;
                   border-radius: 3px;
           position: absolute;
@@ -3542,9 +3542,13 @@ span.checkbox {
           font-size: 12px;
           color: #383838;
           line-height: 1.5em; }
+          .binded-trigger-box .tabbed-nav li.item .num-flag .asterisk {
+            display: none; }
           .binded-trigger-box .tabbed-nav li.item .num-flag.red {
             background: #d06a6a;
             color: #fff; }
+            .binded-trigger-box .tabbed-nav li.item .num-flag.red .asterisk {
+              display: inline; }
         .binded-trigger-box .tabbed-nav li.item:hover {
           background: #505050; }
       .binded-trigger-box .tabbed-nav li.item.selected {
@@ -3577,7 +3581,8 @@ span.checkbox {
     -webkit-border-radius: 4px;
             border-radius: 4px;
     width: 92%;
-    min-width: 694px; }
+    min-width: 694px;
+    overflow: hidden; }
   .binded-trigger-box .tabbed-content {
     padding: 10px;
     min-height: 370px;
@@ -4206,5 +4211,33 @@ span.checkbox {
     color: #9e5455; }
   .ftype-element__field.error::placeholder {
     color: #9e5455; }
+
+.tabbed-content .slide-overlays {
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(85, 85, 85, 0.8);
+  top: 0;
+  left: 0;
+  z-index: 100; }
+  .tabbed-content .slide-overlays .overlay {
+    display: none;
+    position: relative; }
+    .tabbed-content .slide-overlays .overlay.data-in-transit {
+      text-align: center; }
+      .tabbed-content .slide-overlays .overlay.data-in-transit .message {
+        margin-top: 200px; }
+    .tabbed-content .slide-overlays .overlay.show {
+      display: block; }
+  .tabbed-content .slide-overlays.show {
+    display: block; }
+
+.formfly .field-type-string {
+  display: block;
+  width: 100%;
+  margin-bottom: 10px; }
+  .formfly .field-type-string input[type=text] {
+    width: 100%; }
 
 /*# sourceMappingURL=styles.css.map */
